cluster/eu-de-01/xbackbone/xbackbone.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xbackbone
  namespace: xbackbone
spec:
  selector:
    app: xbackbone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
